--- a/PipelinePattern/PipelinePattern.csproj
+++ b/PipelinePattern/PipelinePattern.csproj
@@ -2,6 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <Authors>Robert Wąsik</Authors>
+    <Description>Pipeline pattern implementation. Allows to define an intermittent flow.</Description>
+    <RepositoryUrl>https://github.com/rwasik/pipeline-pattern</RepositoryUrl>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
